--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="tudo">
     <section class="menu">
         <header class="menu__header">
-            <img src="assets\vector.png">
+            <!--<img src="assets\vector.png">-->
             <h3 class="menu__title">Carlos Andrés Beristain Cuffaro</h3>
         </header>
         <nav>
@@ -34,14 +34,14 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Carlos Andrés Beristain Cuffaro y construyo paginas web</h2>
+                <h3 class="title__subsection">Actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/CharlyMaths" target="_blank">Github <img src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/charly-maths/" target="_blank">Linkedin <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://www.instagram.com/charly_maths/" target="_blank">Instagram <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://drive.google.com/file/d/13H6Pb1cELKi54gzwz9mCs86sj7I22z8I/view?usp=sharing" target="_blank">Currículo <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -198,8 +198,8 @@
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/CharlyMaths/Encriptador-Alura"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://charlymaths.github.io/Encriptador-Alura/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/CharlyMaths/Encriptador-Alura" target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://charlymaths.github.io/Encriptador-Alura/" target="_blank"><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>
         </div>  
@@ -211,8 +211,8 @@
                 <h3 class="experience__text">Challenge Oracle </h3>
                     <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/CharlyMaths/Ahorcado-Alura"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://charlymaths.github.io/Ahorcado-Alura/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/CharlyMaths/Ahorcado-Alura" target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://charlymaths.github.io/Ahorcado-Alura/" target="_blank"><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>
         </div>
@@ -227,11 +227,11 @@
                 <div class="formcontato__text">
                     <h2 class="formcontato__title">Contacto</h2>
                     <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-                    <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
+                    <h3 class="formcontato__subtext">Completa el siguiente formulario y me pondré en contacto contigo lo antes posible. </h3>
                     <form class="formcontato__form" name="form">
                         <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
                         <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
+                        <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto">
                         <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
                         <button type="submit" class="formcontato__botao">Enviar mensaje</button>
                     </form>
@@ -242,12 +242,11 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
+                <p>Desarrollado por Charly Maths</p>
                 <p>2022</p>
             </div>
         </section>
     </div>
- <!-- Script del documento JavaScript -->
-<script src="validacion.js"></script>
+ <script src="validacion.js"></script>
 </body>
 </html>
